force-app/main/default/objects/custom_create42__c/custom_create42__c.object-meta.xml
<CustomObject>
    <label>Custom created object42</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects42</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>