force-app/main/default/objects/custom_create42__c/fields/custom_create_42field507__c.field-meta.xml
<CustomField>
    <fullName>custom_create_42field507__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 42field507</label>
    <type>Checkbox</type>
</CustomField>