force-app/main/default/objects/custom_create42__c/fields/custom_create_42field509__c.field-meta.xml
<CustomField>
    <fullName>custom_create_42field509__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 42field509</label>
    <type>Checkbox</type>
</CustomField>